[gd_scene load_steps=10 format=3 uid="uid://buk3mdqtutkvd"]

[ext_resource type="Script" path="res://addons/gopilot_utils/scripts/gopilot_conversation.gd" id="1_e7i2k"]
[ext_resource type="PackedScene" uid="uid://q0tot0eolplg" path="res://addons/gopilot_utils/scenes/chat_entry_sample.tscn" id="2_o5d31"]
[ext_resource type="Texture2D" uid="uid://pb5w62qk3erj" path="res://addons/gopilot_utils/textures/sparkle.svg" id="2_tmrl0"]
[ext_resource type="Texture2D" uid="uid://3qjgli2epquj" path="res://addons/gopilot_interface/textures/cross.png" id="3_apl7g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8aaoi"]

[sub_resource type="LabelSettings" id="LabelSettings_ncmbp"]
font_size = 12
font_color = Color(0.493545, 0.493546, 0.493546, 1)

[sub_resource type="GDScript" id="GDScript_lve3m"]
script/source = "@tool
extends MarginContainer

@export var action_sample:Control
@export var actions_container:Container
@export var button_label:RichTextLabel

func _ready() -> void:
	$List/Details.hide()
	$List/Button/ActionBtn.pressed.connect(func(): $List/Details.set_visible(!$List/Details.visible))


func add_action(title:String, action_description:String = \"\", content:String = \"\"):
	var action := action_sample.duplicate()
	action.show()
	var _title:String
	if action_description.is_empty():
		_title = \"Action '\" + title + \"'\"
	else:
		_title = action_description
	action.get_node(\"ActionTitle\").text = _title
	if content:
		action.get_node(\"ContentCon/ActionLabel\").text = content
	action.get_node(\"ActionTitle\").text = title
	button_label.text = _title
	actions_container.add_child(action)


## Adds to the content of the last added action.
func add_to_last_action(text:String, replace:bool = false):
	if actions_container.get_child_count() == 0:
		push_error(\"No actions added. Add action with 'add_action' method!\")
		return
	if !replace:
		actions_container.get_child(-1).get_node(\"ContentCon/ActionLabel\").text = text
	else:
		actions_container.get_child(-1).get_node(\"ContentCon/ActionLabel\").text += text
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c3ur2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7htaj"]

[node name="ChatConversation" type="Control"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -932.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e7i2k")
buddy_visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollCon" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ContentCon" type="VBoxContainer" parent="VBoxContainer/ScrollCon"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="TopVisual" type="VBoxContainer" parent="VBoxContainer/ScrollCon/ContentCon"]
unique_name_in_owner = true
layout_mode = 2

[node name="BuddyCon" type="CenterContainer" parent="VBoxContainer/ScrollCon/ContentCon/TopVisual"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="WelcomeMessage" type="RichTextLabel" parent="VBoxContainer/ScrollCon/ContentCon/TopVisual"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8aaoi")
bbcode_enabled = true
text = "[b]Hello User[/b]
What would you like to do?"
fit_content = true

[node name="Warning" type="Label" parent="VBoxContainer/ScrollCon/ContentCon/TopVisual"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "GoPilot may generate inaccurate or false content.
Always check important information!"
mouse_filter = 0
text = "Always check important information"
label_settings = SubResource("LabelSettings_ncmbp")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Conversation" type="VBoxContainer" parent="VBoxContainer/ScrollCon/ContentCon"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="ChatEntrySample" parent="VBoxContainer/ScrollCon/ContentCon" instance=ExtResource("2_o5d31")]
unique_name_in_owner = true
visible = false
layout_mode = 2
script_icon = null

[node name="ActionSample" type="MarginContainer" parent="VBoxContainer/ScrollCon/ContentCon" node_paths=PackedStringArray("action_sample", "actions_container", "button_label")]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
script = SubResource("GDScript_lve3m")
action_sample = NodePath("List/Details/ActionSample")
actions_container = NodePath("List/Details/Actions")
button_label = NodePath("List/Button/HBoxContainer/RichTextLabel")

[node name="List" type="VBoxContainer" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample"]
layout_mode = 2

[node name="Button" type="PanelContainer" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c3ur2")

[node name="ActionBtn" type="Button" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Button"]
layout_mode = 2
icon = ExtResource("2_tmrl0")
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Button"]
layout_mode = 2
mouse_filter = 2

[node name="Control" type="Control" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Button/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_7htaj")
bbcode_enabled = true
text = "Doing some action..."
fit_content = true
autowrap_mode = 2

[node name="Details" type="ScrollContainer" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ActionSample" type="VBoxContainer" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Details"]
visible = false
layout_mode = 2

[node name="ActionTitle" type="Label" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Details/ActionSample"]
layout_mode = 2

[node name="ContentCon" type="HBoxContainer" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Details/ActionSample"]
layout_mode = 2

[node name="Button" type="TextureRect" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Details/ActionSample/ContentCon"]
visible = false
layout_mode = 2
texture = ExtResource("3_apl7g")

[node name="ActionLabel" type="RichTextLabel" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Details/ActionSample/ContentCon"]
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="Actions" type="VBoxContainer" parent="VBoxContainer/ScrollCon/ContentCon/ActionSample/List/Details"]
layout_mode = 2
size_flags_horizontal = 3
